Update notes-dcl200-2024.nov.25-day3.md